--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.1.13) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * refs ##6555, Enable some options in invite break the form
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 24 Sep 2024 16:38:02 +0200
+
 hcw-athome-caregiver (5.1.12) focal; urgency=medium
 
   [ Olivier Bitsch ]
