--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.5.1.14) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * build fix
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 30 Sep 2024 13:39:30 +0200
+
 hcw-athome-caregiver (0.5.1.13) focal; urgency=medium
 
   [ Gor Grigoryan ]
