--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.5.1.16) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Switch to node 20
+
+  [ Gor Grigoryan ]
+  * change terminate consultation button design
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 01 Oct 2024 09:49:11 +0200
+
 hcw-athome-caregiver (0.5.1.15) focal; urgency=medium
 
   [ Gor Grigoryan ]
