--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+hcw-athome-caregiver (5.2.3) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * New release 5.2.2
+  * Add version in root html
+
+  [ Gor Grigoryan ]
+  * add timezone select
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 08 Oct 2024 15:15:08 +0200
+
 hcw-athome-caregiver (5.2.2) focal; urgency=medium
 
   * refs #7621 - fix cache management by adding hash of files
