--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.2.5) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * add language selector in terms page
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 10 Oct 2024 13:31:52 +0200
+
 hcw-athome-caregiver (5.2.4) focal; urgency=medium
 
   [ Gor Grigoryan ]
