--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.2.6) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * add some missing translations
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Oct 2024 13:29:05 +0200
+
 hcw-athome-caregiver (5.2.5) focal; urgency=medium
 
   [ Gor Grigoryan ]
