--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.2.7) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * fix invite form time select
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Oct 2024 17:30:51 +0200
+
 hcw-athome-caregiver (5.2.6) focal; urgency=medium
 
   [ Gor Grigoryan ]
