--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.2.8) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * show proper error
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Oct 2024 18:31:49 +0200
+
 hcw-athome-caregiver (5.2.7) focal; urgency=medium
 
   [ Gor Grigoryan ]
