--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (5.2.9) UNRELEASED; urgency=medium
+hcw-athome-caregiver (5.2.9) focal; urgency=medium
 
   [ Olivier Bitsch ]
   * New release 5.2.8
