--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.5.2.10) UNRELEASED; urgency=medium
+
+  * hide translator invite checkbox
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 14 Oct 2024 14:07:01 +0000
+
 hcw-athome-caregiver (5.2.9) focal; urgency=medium
 
   [ Olivier Bitsch ]
