--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-hcw-athome-caregiver (0.5.2.11) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.2.12) UNRELEASED; urgency=medium
 
   * hide translator invite checkbox
   * change error snackbar colors
+  * imporove list in markdown
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 14 Oct 2024 14:52:02 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 15 Oct 2024 07:37:02 +0000
 
 hcw-athome-caregiver (5.2.9) focal; urgency=medium
 
