fix Lastname label  in invitations table

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -270,7 +270,7 @@
         "noConsultationInvite": "No consultation invite",
         "phoneNumber": "Phone number",
         "notDefined": "Undefined",
-        "lastname": "Lastname",
+        "lastname": "Name",
         "creationDate": "Creation date",
         "scheduledDate": "Scheduled date",
         "patient": "Patient",
