--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -450,5 +450,11 @@
         "label": "Lien d'invitation",
         "subTitle": "Copiez le lien ci-dessous et partagez-le avec le patient de la manière qui vous convient. Attention, ce lien n'est utilisable qu'une seule fois.",
         "title": "Inviter via un lien"
+    },
+    "metadata": {
+        "Age": "Age",
+        "Country": "Pays",
+        "Custom Id": "ID personnalisé",
+        "Facility": "Facilité"
     }
 }
