--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+hcw-athome-caregiver (5.2.16) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Translated using Weblate (French)
+  * New release 5.2.15
+
+  [ Gor Grigoryan ]
+  * handle metadata missing translation in overlay
+  * fix resize button
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 29 Oct 2024 13:29:36 +0100
+
 hcw-athome-caregiver (5.2.15) focal; urgency=medium
 
   [ Gor Grigoryan ]
