--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (5.2.17) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * New release 5.2.16
+
+  [ Gor Grigoryan ]
+  * make display meta translatable
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Wed, 30 Oct 2024 10:57:16 +0100
+
 hcw-athome-caregiver (5.2.16) focal; urgency=medium
 
   [ Olivier Bitsch ]
