--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.5.2.19) UNRELEASED; urgency=medium
+
+  [ Olivier Bitsch ]
+  * New release 5.2.18
+
+  [ Gor Grigoryan ]
+  * refs #7771, Button are on people face during call on mobile
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 31 Oct 2024 13:15:02 +0000
+
 hcw-athome-caregiver (5.2.18) focal; urgency=medium
 
   [ Gor Grigoryan ]
