--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -353,7 +353,9 @@
         "enablesNotification": "This enables notification when an new consultation is requested.",
         "selectLanguage": "Language",
         "sms": "SMS",
-        "whatsapp": "Whatsapp"
+        "whatsapp": "Whatsapp",
+        "messageServiceSuccess": "Success!",
+        "messageServiceError": "Something went wrong"
     },
     "resetPassword": {
         "changePassword": "Change password",
