refs #7879, Add refresh button of websocket disconnects

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
         "invites": "Invites",
         "testVideoSound": "Test video/sound",
         "support": "Support",
+        "refresh": "Refresh",
         "reconnected": "You are reconnected",
         "connectionFailed": "The connection to the server is not functioning properly, and you can no longer receive consultation requests. If the issue persists, please refresh your page."
     },
