--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.6) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.7) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Fix Dockerfile
@@ -10,8 +10,9 @@ hcw-athome-caregiver (0.5.6) UNRELEASED; urgency=medium
   * refs #7879, Add refresh button of websocket disconnects
   * change chat file download button
   * check if prefix is supported for notification
+  * add file name when exporting consultation report
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 27 Nov 2024 08:07:18 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 04 Dec 2024 10:19:46 +0000
 
 hcw-athome-caregiver (0.5.3) focal; urgency=medium
 
