add uk language in invite form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -237,7 +237,8 @@
         "et": "Tigrigna",
         "sg": "Tamil",
         "ta": "Tamil",
-        "ti": "Tigrinya"
+        "ti": "Tigrinya",
+        "uk": "Ukrainian"
     },
     "overlay": {
         "close": "Close",
@@ -406,7 +407,8 @@
         "patientFirstnameAndLastname": "Patient name",
         "patientBirthday": "Patient birthday",
         "nurse": "Nurse",
-        "new_consultation_form": "New consultation form"
+        "new_consultation_form": "New consultation form",
+        "help": "Help"
     },
     "confirmationDialog": {
         "yesText": "Confirm",
