--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.7) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.8) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Fix Dockerfile
@@ -11,8 +11,9 @@ hcw-athome-caregiver (0.5.7) UNRELEASED; urgency=medium
   * change chat file download button
   * check if prefix is supported for notification
   * add file name when exporting consultation report
+  * add uk language in invite form
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 04 Dec 2024 10:19:46 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 10 Dec 2024 10:58:02 +0000
 
 hcw-athome-caregiver (0.5.3) focal; urgency=medium
 
