refs #7474, In app training - UX improvement for doctor app

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -448,6 +448,36 @@
         "copied": "Copied to clipboard",
         "sent": "The invite link has been sent successfully to participant"
     },
+    "tour": {
+        "nextBtnTitle": "Next",
+        "prevBtnTitle": "Prev",
+        "endBtnTitle": "Finish",
+        "invitesMenuTitle": "Title",
+        "invitesMenuContent": "Content",
+        "newInviteButtonTitle": "Title",
+        "newInviteButtonContent": "Content",
+        "remotePatientInviteTitle": "Title",
+        "remotePatientInviteContent": "Content",
+        "inviteFormContactInputTitle": "Title",
+        "inviteFormContactInputContent": "Content",
+        "inviteFormSendLinkManuallyTitle": "Title",
+        "inviteFormSendLinkManuallyContent": "Content",
+        "waitingRoomMenuTitle": "Title",
+        "waitingRoomMenuContent": "Content",
+        "openedConsultationsMenuTitle": "Title",
+        "openedConsultationsMenuContent": "Content",
+        "consultationsHistoryMenuTitle": "Title",
+        "consultationsHistoryMenuContent": "Content",
+        "headerProfileMenuTitle": "Title",
+        "headerProfileMenuContent": "Content",
+        "startTourTitle": "Title",
+        "startTourDescription": "Description",
+        "startTourDismissBtnTitle": "No Thanks",
+        "startTourSubmitBtnTitle": "Ok",
+        "endTourTitle": "Title",
+        "endTourDescription": "Description",
+        "endTourSubmitBtnTitle": "Ok"
+    },
     "metadata": {
         "Age": "Age",
         "Country": "Country",
