Add missing text for datetime in english

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -207,7 +207,7 @@
         "patient": "Patient",
         "thirdParty": "Third party",
         "inviteExpert": "Invite a colleague",
-        "dateTime": "",
+        "dateTime": "Date and time",
         "chooseDate": "Choose a date",
         "selectTimezone": "Select Timezone",
         "chooseTime": "Choose a time",
