update translation files,remove support page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -137,8 +137,8 @@
         "submit": "Submit",
         "youHaveTo": "You have to accept",
         "terms": "Terms and Condition",
-        "before": "before you can use HCW@Home.",
-        "pleaseAccept": "You have to accept {{terms}} before you can use HCW@Home",
+        "before": "before you can use {{branding}}.",
+        "pleaseAccept": "You have to accept {{terms}} before you can use {{branding}}",
         "selectCountry": "Define your country and language:",
         "notConfigured": "Terms and conditions have not yet been configured.",
         "description": "Access condition",
@@ -262,7 +262,7 @@
         "startDateTime": "Start date/time",
         "endDateTime": "End date/time",
         "duration": "Duration",
-        "areYouSatisfiedWithTheHomeApp": "Are you satisfied with the @{{branding}}  app?",
+        "areYouSatisfiedWithTheHomeApp": "Are you satisfied with the {{branding}}  app?",
         "doYouWantToLeaveUsAComment": "Do you want to leave us a comment?",
         "yourComment": "Your comment",
         "thanksForYourFeedback": "Thanks for your feedback.",
@@ -377,22 +377,6 @@
         "anUnknownErrorHasBeenEncountered": "An unknown error has been encountered. Please try again.",
         "home": "HOME"
     },
-    "support": {
-        "incidentReportHome": "Incident report @{{branding}}",
-        "thisFormAllowsYouToReportAProblem": "This form allows you to report a problem encountered while using @{{branding}} . Before reporting an incident, please verify that you are using @{{branding}}  under the best possible conditions:",
-        "yourBrowserIsUpToDate": "Your browser is up to date.",
-        "youTriedThePageTestAudioSound": "You tried the page Test audio/sound order to attempt to help yourself.",
-        "pleaseFillUpThisForm": "Please fill up this form from the computer you use the application @{{branding}} . Order to help us in the diagnostic, your IP adress, the name and the version of your browser will be reported.",
-        "problemEncountered": "Problem encountered description",
-        "plsProvideDetailsAboutTheProblems": "Please provide details about the problem encountered, by exemple \"pushing the call button from a consultation returned no action.\"",
-        "whatWasYouDoing": "What was you doing before the issue?",
-        "plsProvideDetailsOfWhat": "Please provide details of what you was doing before you encountered the problem, by example \"I was into the consultation in order to send text messages\".",
-        "theFollowingInformation": "The following information we will reported",
-        "browserVersion": "Browser version:",
-        "yourIpAddress": "Your IP address:",
-        "yourEmail": "Your email:",
-        "send": "Send"
-    },
     "testMedia": {
         "microTest": "MICRO TEST",
         "aProperlyTuned": "A properly tuned microphone should put the VU meter in the green center area when speaking.",
@@ -448,8 +432,8 @@
         "consultationsHistoryMenuContent": "When you decide to close a consultation, your patient will no longer be able to exchange messages with you. The consultation will remain in this history for 24 hours before being deleted from the system for security reasons.",
         "headerProfileMenuTitle": "Access to your profile",
         "headerProfileMenuContent": "You can manage some information from your profile page.",
-        "startTourTitle": "Welcome to @{{branding}}",
-        "startTourDescription": "@{{branding}} helps you connect with patients. This tour will help you understand the concept. You can skip the tour at any time by closing this help.",
+        "startTourTitle": "Welcome to {{branding}}",
+        "startTourDescription": "{{branding}} helps you connect with patients. This tour will help you understand the concept. You can skip the tour at any time by closing this help.",
         "startTourDismissBtnTitle": "Skip the tour",
         "startTourSubmitBtnTitle": "Next",
         "endTourTitle": "Profile page",
