--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-hcw-athome-caregiver (0.5.9) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.10) UNRELEASED; urgency=medium
 
   * add variables for new translations
+  * update translation files,remove support page
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 18 Dec 2024 08:43:52 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 18 Dec 2024 09:05:04 +0000
 
 hcw-athome-caregiver (0.5.8) focal; urgency=medium
 
