--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,18 @@
-hcw-athome-caregiver (0.5.13) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.14) UNRELEASED; urgency=medium
 
+  [ Gor Grigoryan ]
   * add variables for new translations
   * update translation files,remove support page
   * fix control buttons when calling
+  * add uk json
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 18 Dec 2024 14:06:52 +0000
+  [ Weblate ]
+  * Update translation files
+
+  [ Gor Grigoryan ]
+  * fix tour backdrop
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 19 Dec 2024 13:56:45 +0000
 
 hcw-athome-caregiver (0.5.8) focal; urgency=medium
 
