new dev release 0.5.16

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.15) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.16) UNRELEASED; urgency=medium
 
   [ Gor Grigoryan ]
   * add variables for new translations
@@ -12,8 +12,9 @@ hcw-athome-caregiver (0.5.15) UNRELEASED; urgency=medium
   [ Gor Grigoryan ]
   * fix tour backdrop
   * add ukranian support
+  * fix verification page ui
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 19 Dec 2024 16:53:08 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 07 Jan 2025 10:31:04 +0000
 
 hcw-athome-caregiver (0.5.8) focal; urgency=medium
 
