refs #7774, Do not hardcode language in code

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -238,7 +238,8 @@
         "sg": "Tamil",
         "ta": "Tamil",
         "ti": "Tigrinya",
-        "uk": "Ukrainian"
+        "uk": "Ukrainian",
+        "sv": "Swedish"
     },
     "overlay": {
         "close": "Close",
