--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -238,7 +238,8 @@
     "sg": "Тамільська",
     "ta": "Тамільська",
     "ti": "Тігринья",
-    "uk": "Українська"
+    "uk": "Українська",
+    "sv": "Шведська"
   },
   "overlay": {
     "close": "Закрити",
