--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.18) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.19) UNRELEASED; urgency=medium
 
   [ Gor Grigoryan ]
   * add variables for new translations
@@ -14,7 +14,13 @@ hcw-athome-caregiver (0.5.18) UNRELEASED; urgency=medium
   * add ukranian support
   * fix verification page ui
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 07 Jan 2025 10:31:04 +0000
+  [ Olivier Bitsch ]
+  * New dev release for docker
+
+  [ Gor Grigoryan ]
+  *  add support for 'onclick' in footer markdown
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Fri, 10 Jan 2025 09:56:07 +0000
 
 hcw-athome-caregiver (0.5.8) focal; urgency=medium
 
