translat invitations page title

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -270,6 +270,7 @@
         "sendMyFeedback": "Send my feedback"
     },
     "invitations": {
+        "title": "INVITATIONS",
         "newInvite": "New invite",
         "noConsultationInvite": "No consultation invite",
         "phoneNumber": "Phone number",
