--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -246,6 +246,7 @@
         "sendMyFeedback": "Envoyer mon feedback"
     },
     "invitations": {
+        "title": "INVITATIONS",
         "newInvite": "Nouvelle invitation",
         "noConsultationInvite": "Aucune invitation de téléconsultation",
         "phoneNumber": "Numéro de téléphone",
