handle different statuses for invite

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -279,14 +279,25 @@
         "creationDate": "Creation date",
         "scheduledDate": "Scheduled date",
         "patient": "Patient",
+        "pending": "Pending",
         "sent": "Sent",
+        "sending": "Sending",
         "accepted": "Accepted",
         "closed": "Closed",
         "canceled": "Canceled",
         "guestInvite": "Guest",
         "none": "None",
-        "translatorRequestInvite": "Interpreter",
         "refused": "Refused",
+        "queued": "Queued",
+        "failed": "Failed",
+        "delivered": "Delivered",
+        "undelivered": "Undelivered",
+        "receiving": "Receiving",
+        "received": "Received",
+        "scheduled": "Scheduled",
+        "read": "Read",
+        "partiallyDelivered": "Partially Delivered",
+        "translatorRequestInvite": "Interpreter",
         "sendAgain": "Send again",
         "sendAgainTheSMSOrEmailInvite": "Send again the SMS or Email invite",
         "cancel": "Cancel",
