add acknowledged status

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -296,6 +296,7 @@
         "received": "Received",
         "scheduled": "Scheduled",
         "read": "Read",
+        "acknowledged": "Acknowledged",
         "partiallyDelivered": "Partially Delivered",
         "translatorRequestInvite": "Interpreter",
         "sendAgain": "Send again",
