refs #7983, add new scheduled for invite status

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -297,6 +297,7 @@
         "scheduled": "Scheduled",
         "read": "Read",
         "acknowledged": "Acknowledged",
+        "scheduledForInvite": "Acknowledged",
         "partiallyDelivered": "Partially Delivered",
         "translatorRequestInvite": "Interpreter",
         "sendAgain": "Send again",
