refs  #7983, add new statuses of invites

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -297,7 +297,7 @@
         "scheduled": "Scheduled",
         "read": "Read",
         "acknowledged": "Acknowledged",
-        "scheduledForInvite": "Acknowledged",
+        "scheduledForInvite": "Scheduled For Invite",
         "partiallyDelivered": "Partially Delivered",
         "translatorRequestInvite": "Interpreter",
         "sendAgain": "Send again",
