refs #7986, Translation Ukrainian missing

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -175,6 +175,8 @@
         "sex": "Gender",
         "male": "Male",
         "female": "Female",
+        "other": "Other",
+        "unknown": "Unknown",
         "pleaseChooseTheSex": "Please choose gender",
         "waitingQueue": "Shared waiting queue",
         "mySelf": "None",
