--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -175,6 +175,8 @@
     "sex": "Стать",
     "male": "Чоловіча",
     "female": "Жіноча",
+    "other": "Інше",
+    "unknown": "Невідомо",
     "pleaseChooseTheSex": "Будь ласка, оберіть стать",
     "waitingQueue": "Загальна черга очікування",
     "mySelf": "Ніхто",
@@ -414,30 +416,30 @@
     "prevBtnTitle": "Назад",
     "endBtnTitle": "Завершити",
     "invitesMenuTitle": "Керування запрошеннями",
-    "invitesMenuContent": "Запрошення дозволяють пацієнтам приєднуватися до вас у цій програмі. Створюйте або відкликайте запрошення будь-коли в цій області.",
+    "invitesMenuContent": "Запрошення дозволяють пацієнтам приєднуватися до вас у цьому додатку. Ви можете створювати або відкликати запрошення будь-коли в цій області.",
     "newInviteButtonTitle": "Нове запрошення",
     "newInviteButtonContent": "Натисніть 'Нове запрошення', щоб відкрити форму.",
-    "remotePatientInviteTitle": "Запросити дистанційного пацієнта",
-    "remotePatientInviteContent": "Натисніть 'Дистанційний пацієнт', щоб пацієнт міг приєднатися до вас у цій програмі.",
+    "remotePatientInviteTitle": "Запросити віддаленого пацієнта",
+    "remotePatientInviteContent": "Натисніть 'Віддалений пацієнт', щоб пацієнт міг приєднатися до вас у цьому додатку.",
     "inviteFormContactInputTitle": "Інформація про пацієнта",
-    "inviteFormContactInputContent": "Заповніть інформацію про пацієнта, щоб легко розпізнати, який пацієнт очікує дистанційної консультації. Ви можете надіслати посилання на запрошення через SMS, електронну пошту або WhatsApp, залежно від конфігурації програмного забезпечення та країни пацієнта.",
+    "inviteFormContactInputContent": "Заповніть інформацію про пацієнта, щоб легко розпізнати, який пацієнт очікує на віддалену консультацію. Ви можете надіслати посилання на запрошення через SMS, email або WhatsApp залежно від конфігурації програмного забезпечення та країни пацієнта.",
     "inviteFormSendLinkManuallyTitle": "Надіслати посилання вручну",
-    "inviteFormSendLinkManuallyContent": "Якщо ви віддаєте перевагу ділитися посиланням з пацієнтом вручну, поставте цю позначку. Після надсилання ви зможете скопіювати посилання та поділитися ним (наприклад, в електронному листі, який ви напишете самі). Будьте обережні, не використовуйте посилання самі для тестування, оскільки посилання можна використати лише один раз.",
-    "waitingRoomMenuTitle": "Зала очікування пацієнтів",
-    "waitingRoomMenuContent": "Коли ваш пацієнт скористається посиланням і запитає приєднання до консультації, ви отримаєте сповіщення зі звуком і побачите пацієнта, що очікує, у цій черзі. Тримайте програму відкритою, щоб зменшити ризик пропустити консультацію.",
-    "openedConsultationsMenuTitle": "Довготривалі консультації",
-    "openedConsultationsMenuContent": "Після завершення консультації ви можете залишити її відкритою, щоб пацієнт міг продовжувати спілкування з вами та надсилати повідомлення. Такі консультації можна переглянути в цьому розділі.",
-    "consultationsHistoryMenuTitle": "Закрита консультація",
-    "consultationsHistoryMenuContent": "Коли ви вирішите закрити консультацію, ваш пацієнт більше не зможе обмінюватися повідомленнями з вами. Консультація залишатиметься в історії протягом 24 годин, а потім буде видалена із системи з міркувань безпеки.",
+    "inviteFormSendLinkManuallyContent": "Якщо ви віддаєте перевагу поділитися посиланням з пацієнтом вручну, відмітьте цей пункт. Після надсилання ви зможете скопіювати посилання та поділитися ним (наприклад, у листі, який ви напишете самостійно). Будьте обережні, не використовуйте посилання для тестування, оскільки посилання можна використати лише один раз.",
+    "waitingRoomMenuTitle": "Зал очікування пацієнтів",
+    "waitingRoomMenuContent": "Як тільки ваш пацієнт скористається посиланням і запросить приєднатися до консультації, ви отримаєте сповіщення зі звуком і побачите пацієнта у цій черзі. Тримайте додаток відкритим, щоб зменшити ризик пропустити консультацію.",
+    "openedConsultationsMenuTitle": "Довгострокові консультації",
+    "openedConsultationsMenuContent": "Після проведення консультації ви можете залишити її відкритою, щоб пацієнт міг продовжувати спілкуватися з вами та надсилати повідомлення. Такі консультації можна переглядати у цьому розділі.",
+    "consultationsHistoryMenuTitle": "Закриті консультації",
+    "consultationsHistoryMenuContent": "Коли ви вирішите закрити консультацію, ваш пацієнт більше не зможе обмінюватися з вами повідомленнями. Консультація залишиться в цій історії протягом 24 годин, а потім буде видалена з системи з міркувань безпеки.",
     "headerProfileMenuTitle": "Доступ до вашого профілю",
-    "headerProfileMenuContent": "Ви можете керувати певною інформацією на сторінці вашого профілю.",
+    "headerProfileMenuContent": "Ви можете керувати деякою інформацією на сторінці вашого профілю.",
     "startTourTitle": "Ласкаво просимо до {{branding}}",
-    "startTourDescription": "{{branding}} допомагає вам підключатися до пацієнтів. Цей тур допоможе вам зрозуміти концепцію. Ви можете пропустити тур у будь-який час, закривши цю допомогу.",
+    "startTourDescription": "{{branding}} допомагає вам підключатися до пацієнтів. Цей тур допоможе вам зрозуміти концепцію. Ви можете пропустити тур у будь-який момент, закривши цю допомогу.",
     "startTourDismissBtnTitle": "Пропустити тур",
     "startTourSubmitBtnTitle": "Далі",
     "endTourTitle": "Сторінка профілю",
-    "endTourDescription": "Ви можете змінити мову або увімкнути SMS-сповіщення, якщо щось станеться, коли ви не підключені до цієї програми.",
-    "endTourSubmitBtnTitle": "ОК"
+    "endTourDescription": "Ви можете змінити мову або увімкнути SMS-сповіщення у випадку, якщо щось станеться, коли ви не підключені до цього додатку.",
+    "endTourSubmitBtnTitle": "Ок"
   },
   "metadata": {
     "Age": "Вік",
