refs #7990, change view of invite table

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -305,6 +305,10 @@
         "sendAgain": "Send again",
         "sendAgainTheSMSOrEmailInvite": "Send again the SMS or Email invite",
         "cancel": "Cancel",
+        "edit": "Edit",
+        "guestTooltip": "Guest",
+        "expertTooltip": "Expert",
+        "participant": "Participant",
         "cancelThisInvitationToJoinAConsultation": "Cancel this invitation to join a consultation",
         "previous": "Previous",
         "next": "Next",
