--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -292,6 +292,7 @@
     "sendAgain": "Надіслати знову",
     "sendAgainTheSMSOrEmailInvite": "Надіслати знову SMS або електронне запрошення",
     "cancel": "Скасувати",
+    "edit": "Редагувати",
     "cancelThisInvitationToJoinAConsultation": "Скасувати це запрошення для участі в консультації",
     "previous": "Попереднє",
     "next": "Наступне",
