refs #7982, have guests and expersts column even when they didn't join

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -84,7 +84,8 @@
         "time": "Time",
         "duration": "Duration",
         "translator": "Interpreter",
-        "guest": "Guest",
+        "guestTooltip": "Guest",
+        "participant": "Participant",
         "sendAgainANewInvitation": "Send again a new invitation",
         "sendAgainTheInvitation": "Send again the invitation",
         "unread": "Unread",
